ubiquity (2.5.17) UNRELEASED; urgency=low

  * Do not show the installer in dbusmneu.  Thanks Ken VanDine!

 -- Evan Dandrea <ev@ubuntu.com>  Thu, 24 Feb 2011 16:53:01 +0000

ubiquity (2.5.16) natty; urgency=low

  [ Evan Dandrea ]
  * Rename the keyboard layout guessing button (LP: #717500).
  * Install oem-config-slideshow-ubuntu alongside oem-config-gtk.
  * Fix accessibility support in the installer session.
  * Automatic update of included source packages: flash-kernel
    2.28ubuntu14, partman-auto 93ubuntu5.

  [ Mario Limonciello ]
  * Create a dummy job for oem-config-debconf to prevent race
    conditions with oem-config-gtk and gdm. (LP: #650703)

 -- Evan Dandrea <ev@ubuntu.com>  Sun, 20 Feb 2011 03:00:54 +0000

ubiquity (2.5.15) natty; urgency=low

  [ Colin Watson ]
  * Ignore "Not Available" strings in dmidecode output (LP: #711968).
  * Tell keyboard-configuration not to write defaults in the debconf
    database when we're in the process of changing the layout (LP: #705917).
  * Automatic update of included source packages: console-setup 1.57ubuntu7,
    flash-kernel 2.28ubuntu13, grub-installer 1.60ubuntu1, netcfg
    1.60ubuntu2, partman-auto 93ubuntu4, partman-btrfs 5ubuntu3,
    partman-partitioning 79ubuntu2.

  [ Jonathan Riddell ]
  * frontend/kde_ui.py use new KDE wallpaper

 -- Colin Watson <cjwatson@ubuntu.com>  Tue, 15 Feb 2011 11:52:27 +0000

ubiquity (2.5.14) natty; urgency=low

  * Append to the timezone model using the correct types (LP: #702898).
  * Update translations from Launchpad.

 -- Evan Dandrea <ev@ubuntu.com>  Wed, 02 Feb 2011 10:24:41 +0000

ubiquity (2.5.13) natty; urgency=low

  [ Jonathan Riddell ]
  * Fix layout issues in stepPartMan.ui and stepLanguage.ui LP: #705915

  [ Evan Dandrea ]
  * Show a Shutdown Now button (LP: #690726). Thanks Cyrus Lien!
  * Only show the shutdown button if ubiquity/show_shutdown_button was
    preseeded true.
  * Don't show a resize grip on the panel.

  [ Colin Watson ]